Update to spring boot 2